--- a/src/cp/resources/plist/10.3/new/NSProCommandGroups.plist
+++ b/src/cp/resources/plist/10.3/new/NSProCommandGroups.plist
@@ -2,209 +2,209 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>Hacks</key>
+	<key>CommandPost</key>
 	<dict>
 		<key>color index</key>
 		<integer>2</integer>
 		<key>commands</key>
 		<array>
-			<string>FCPXCopyWithCustomLabel</string>
-			<string>FCPXCopyWithCustomLabelAndFolder</string>
-			<string>FCPXAddNoteToSelectedClip</string>
-			<string>FCPXHackSelectForward</string>
-			<string>FCPXHackSelectBackwards</string>
-			<string>FCPXHackToggleVoiceCommands</string>
-			<string>FCPXHackLockPlayhead</string>
-			<string>FCPXHackHUD</string>
-			<string>FCPXHackTitlesOne</string>
-			<string>FCPXHackTitlesTwo</string>
-			<string>FCPXHackTitlesThree</string>
-			<string>FCPXHackTitlesFour</string>
-			<string>FCPXHackTitlesFive</string>
-			<string>FCPXHackGeneratorsOne</string>
-			<string>FCPXHackGeneratorsTwo</string>
-			<string>FCPXHackGeneratorsThree</string>
-			<string>FCPXHackGeneratorsFour</string>
-			<string>FCPXHackGeneratorsFive</string>
-			<string>FCPXHackTransitionsOne</string>
-			<string>FCPXHackTransitionsTwo</string>
-			<string>FCPXHackTransitionsThree</string>
-			<string>FCPXHackTransitionsFour</string>
-			<string>FCPXHackTransitionsFive</string>
-			<string>FCPXHackToggleTouchBar</string>
-			<string>FCPXHackConsole</string>
-			<string>FCPXHackCutSwitchAngle01Video</string>
-			<string>FCPXHackCutSwitchAngle02Video</string>
-			<string>FCPXHackCutSwitchAngle03Video</string>
-			<string>FCPXHackCutSwitchAngle04Video</string>
-			<string>FCPXHackCutSwitchAngle05Video</string>
-			<string>FCPXHackCutSwitchAngle06Video</string>
-			<string>FCPXHackCutSwitchAngle07Video</string>
-			<string>FCPXHackCutSwitchAngle08Video</string>
-			<string>FCPXHackCutSwitchAngle09Video</string>
-			<string>FCPXHackCutSwitchAngle10Video</string>
-			<string>FCPXHackCutSwitchAngle11Video</string>
-			<string>FCPXHackCutSwitchAngle12Video</string>
-			<string>FCPXHackCutSwitchAngle13Video</string>
-			<string>FCPXHackCutSwitchAngle14Video</string>
-			<string>FCPXHackCutSwitchAngle15Video</string>
-			<string>FCPXHackCutSwitchAngle16Video</string>
-			<string>FCPXHackCutSwitchAngle01Audio</string>
-			<string>FCPXHackCutSwitchAngle02Audio</string>
-			<string>FCPXHackCutSwitchAngle03Audio</string>
-			<string>FCPXHackCutSwitchAngle04Audio</string>
-			<string>FCPXHackCutSwitchAngle05Audio</string>
-			<string>FCPXHackCutSwitchAngle06Audio</string>
-			<string>FCPXHackCutSwitchAngle07Audio</string>
-			<string>FCPXHackCutSwitchAngle08Audio</string>
-			<string>FCPXHackCutSwitchAngle09Audio</string>
-			<string>FCPXHackCutSwitchAngle10Audio</string>
-			<string>FCPXHackCutSwitchAngle11Audio</string>
-			<string>FCPXHackCutSwitchAngle12Audio</string>
-			<string>FCPXHackCutSwitchAngle13Audio</string>
-			<string>FCPXHackCutSwitchAngle14Audio</string>
-			<string>FCPXHackCutSwitchAngle15Audio</string>
-			<string>FCPXHackCutSwitchAngle16Audio</string>
-			<string>FCPXHackCutSwitchAngle01Both</string>
-			<string>FCPXHackCutSwitchAngle02Both</string>
-			<string>FCPXHackCutSwitchAngle03Both</string>
-			<string>FCPXHackCutSwitchAngle04Both</string>
-			<string>FCPXHackCutSwitchAngle05Both</string>
-			<string>FCPXHackCutSwitchAngle06Both</string>
-			<string>FCPXHackCutSwitchAngle07Both</string>
-			<string>FCPXHackCutSwitchAngle08Both</string>
-			<string>FCPXHackCutSwitchAngle09Both</string>
-			<string>FCPXHackCutSwitchAngle10Both</string>
-			<string>FCPXHackCutSwitchAngle11Both</string>
-			<string>FCPXHackCutSwitchAngle12Both</string>
-			<string>FCPXHackCutSwitchAngle13Both</string>
-			<string>FCPXHackCutSwitchAngle14Both</string>
-			<string>FCPXHackCutSwitchAngle15Both</string>
-			<string>FCPXHackCutSwitchAngle16Both</string>
-			<string>FCPXHackMoveToPlayhead</string>
-			<string>FCPXHackPuckOneMouse</string>
-			<string>FCPXHackPuckTwoMouse</string>
-			<string>FCPXHackPuckThreeMouse</string>
-			<string>FCPXHackPuckFourMouse</string>
-			<string>FCPXHackColorPuckOneMouse</string>
-			<string>FCPXHackColorPuckTwoMouse</string>
-			<string>FCPXHackColorPuckThreeMouse</string>
-			<string>FCPXHackColorPuckFourMouse</string>
-			<string>FCPXHackSaturationPuckOneMouse</string>
-			<string>FCPXHackSaturationPuckTwoMouse</string>
-			<string>FCPXHackSaturationPuckThreeMouse</string>
-			<string>FCPXHackSaturationPuckFourMouse</string>
-			<string>FCPXHackExposurePuckOneMouse</string>
-			<string>FCPXHackExposurePuckTwoMouse</string>
-			<string>FCPXHackExposurePuckThreeMouse</string>
-			<string>FCPXHackExposurePuckFourMouse</string>
-			<string>FCPXHackSelectClipAtLaneOne</string>
-			<string>FCPXHackSelectClipAtLaneTwo</string>
-			<string>FCPXHackSelectClipAtLaneThree</string>
-			<string>FCPXHackSelectClipAtLaneFour</string>
-			<string>FCPXHackSelectClipAtLaneFive</string>
-			<string>FCPXHackSelectClipAtLaneSix</string>
-			<string>FCPXHackSelectClipAtLaneSeven</string>
-			<string>FCPXHackSelectClipAtLaneEight</string>
-			<string>FCPXHackSelectClipAtLaneNine</string>
-			<string>FCPXHackSelectClipAtLaneTen</string>
-			<string>FCPXHackChangeSmartCollectionsLabel</string>
-			<string>FCPXHackCreateOptimizedMediaOn</string>
-			<string>FCPXHackCreateOptimizedMediaOff</string>
-			<string>FCPXHackCreateMulticamOptimizedMediaOn</string>
-			<string>FCPXHackCreateMulticamOptimizedMediaOff</string>
-			<string>FCPXHackCreateProxyMediaOn</string>
-			<string>FCPXHackCreateProxyMediaOff</string>
-			<string>FCPXHackLeaveInPlaceOn</string>
-			<string>FCPXHackLeaveInPlaceOff</string>
-			<string>FCPXHackBackgroundRenderOn</string>
-			<string>FCPXHackBackgroundRenderOff</string>
-			<string>FCPXHackChangeTimelineClipHeightUp</string>
-			<string>FCPXHackChangeTimelineClipHeightDown</string>
-			<string>FCPXHackColorPuckOne</string>
-			<string>FCPXHackColorPuckTwo</string>
-			<string>FCPXHackColorPuckThree</string>
-			<string>FCPXHackColorPuckFour</string>
-			<string>FCPXHackSaturationPuckOne</string>
-			<string>FCPXHackSaturationPuckTwo</string>
-			<string>FCPXHackSaturationPuckThree</string>
-			<string>FCPXHackSaturationPuckFour</string>
-			<string>FCPXHackExposurePuckOne</string>
-			<string>FCPXHackExposurePuckTwo</string>
-			<string>FCPXHackExposurePuckThree</string>
-			<string>FCPXHackExposurePuckFour</string>
-			<string>FCPXHackColorPuckOneUp</string>
-			<string>FCPXHackColorPuckTwoUp</string>
-			<string>FCPXHackColorPuckThreeUp</string>
-			<string>FCPXHackColorPuckFourUp</string>
-			<string>FCPXHackColorPuckOneDown</string>
-			<string>FCPXHackColorPuckTwoDown</string>
-			<string>FCPXHackColorPuckThreeDown</string>
-			<string>FCPXHackColorPuckFourDown</string>
-			<string>FCPXHackColorPuckOneLeft</string>
-			<string>FCPXHackColorPuckTwoLeft</string>
-			<string>FCPXHackColorPuckThreeLeft</string>
-			<string>FCPXHackColorPuckFourLeft</string>
-			<string>FCPXHackColorPuckOneRight</string>
-			<string>FCPXHackColorPuckTwoRight</string>
-			<string>FCPXHackColorPuckThreeRight</string>
-			<string>FCPXHackColorPuckFourRight</string>
-			<string>FCPXHackSaturationPuckOneUp</string>
-			<string>FCPXHackSaturationPuckTwoUp</string>
-			<string>FCPXHackSaturationPuckThreeUp</string>
-			<string>FCPXHackSaturationPuckFourUp</string>
-			<string>FCPXHackSaturationPuckOneDown</string>
-			<string>FCPXHackSaturationPuckTwoDown</string>
-			<string>FCPXHackSaturationPuckThreeDown</string>
-			<string>FCPXHackSaturationPuckFourDown</string>
-			<string>FCPXHackExposurePuckOneUp</string>
-			<string>FCPXHackExposurePuckTwoUp</string>
-			<string>FCPXHackExposurePuckThreeUp</string>
-			<string>FCPXHackExposurePuckFourUp</string>
-			<string>FCPXHackExposurePuckOneDown</string>
-			<string>FCPXHackExposurePuckTwoDown</string>
-			<string>FCPXHackExposurePuckThreeDown</string>
-			<string>FCPXHackExposurePuckFourDown</string>
-			<string>FCPXHackScrollingTimeline</string>
-			<string>FCPXHackEffectsOne</string>
-			<string>FCPXHackEffectsTwo</string>
-			<string>FCPXHackEffectsThree</string>
-			<string>FCPXHackEffectsFour</string>
-			<string>FCPXHackEffectsFive</string>
-			<string>FCPXHackLaunchFinalCutPro</string>
-			<string>FCPXHackShowListOfShortcutKeys</string>
-			<string>FCPXHackHighlightBrowserPlayhead</string>
-			<string>FCPXHackRevealInBrowserAndHighlight</string>
-			<string>FCPXHackSingleMatchFrameAndHighlight</string>
-			<string>FCPXHackRevealMulticamClipInBrowserAndHighlight</string>
-			<string>FCPXHackRevealMulticamClipInAngleEditorAndHighlight</string>
-			<string>FCPXHackBatchExportFromBrowser</string>
-			<string>FCPXHackChangeBackupInterval</string>
-			<string>FCPXHackToggleTimecodeOverlays</string>
-			<string>FCPXHackToggleMovingMarkers</string>
-			<string>FCPXHackAllowTasksDuringPlayback</string>
-			<string>FCPXHackSelectColorBoardPuckOne</string>
-			<string>FCPXHackSelectColorBoardPuckTwo</string>
-			<string>FCPXHackSelectColorBoardPuckThree</string>
-			<string>FCPXHackSelectColorBoardPuckFour</string>
-			<string>FCPXHackRestoreKeywordPresetOne</string>
-			<string>FCPXHackRestoreKeywordPresetTwo</string>
-			<string>FCPXHackRestoreKeywordPresetThree</string>
-			<string>FCPXHackRestoreKeywordPresetFour</string>
-			<string>FCPXHackRestoreKeywordPresetFive</string>
-			<string>FCPXHackRestoreKeywordPresetSix</string>
-			<string>FCPXHackRestoreKeywordPresetSeven</string>
-			<string>FCPXHackRestoreKeywordPresetEight</string>
-			<string>FCPXHackRestoreKeywordPresetNine</string>
-			<string>FCPXHackSaveKeywordPresetOne</string>
-			<string>FCPXHackSaveKeywordPresetTwo</string>
-			<string>FCPXHackSaveKeywordPresetThree</string>
-			<string>FCPXHackSaveKeywordPresetFour</string>
-			<string>FCPXHackSaveKeywordPresetFive</string>
-			<string>FCPXHackSaveKeywordPresetSix</string>
-			<string>FCPXHackSaveKeywordPresetSeven</string>
-			<string>FCPXHackSaveKeywordPresetEight</string>
-			<string>FCPXHackSaveKeywordPresetNine</string>
+			<string>cpCopyWithCustomLabel</string>
+			<string>cpCopyWithCustomLabelAndFolder</string>
+			<string>cpAddNoteToSelectedClip</string>
+			<string>cpSelectForward</string>
+			<string>cpSelectBackwards</string>
+			<string>cpToggleVoiceCommands</string>
+			<string>cpLockPlayhead</string>
+			<string>cpHUD</string>
+			<string>cpTitlesOne</string>
+			<string>cpTitlesTwo</string>
+			<string>cpTitlesThree</string>
+			<string>cpTitlesFour</string>
+			<string>cpTitlesFive</string>
+			<string>cpGeneratorsOne</string>
+			<string>cpGeneratorsTwo</string>
+			<string>cpGeneratorsThree</string>
+			<string>cpGeneratorsFour</string>
+			<string>cpGeneratorsFive</string>
+			<string>cpTransitionsOne</string>
+			<string>cpTransitionsTwo</string>
+			<string>cpTransitionsThree</string>
+			<string>cpTransitionsFour</string>
+			<string>cpTransitionsFive</string>
+			<string>cpToggleTouchBar</string>
+			<string>cpConsole</string>
+			<string>cpCutSwitchAngle01Video</string>
+			<string>cpCutSwitchAngle02Video</string>
+			<string>cpCutSwitchAngle03Video</string>
+			<string>cpCutSwitchAngle04Video</string>
+			<string>cpCutSwitchAngle05Video</string>
+			<string>cpCutSwitchAngle06Video</string>
+			<string>cpCutSwitchAngle07Video</string>
+			<string>cpCutSwitchAngle08Video</string>
+			<string>cpCutSwitchAngle09Video</string>
+			<string>cpCutSwitchAngle10Video</string>
+			<string>cpCutSwitchAngle11Video</string>
+			<string>cpCutSwitchAngle12Video</string>
+			<string>cpCutSwitchAngle13Video</string>
+			<string>cpCutSwitchAngle14Video</string>
+			<string>cpCutSwitchAngle15Video</string>
+			<string>cpCutSwitchAngle16Video</string>
+			<string>cpCutSwitchAngle01Audio</string>
+			<string>cpCutSwitchAngle02Audio</string>
+			<string>cpCutSwitchAngle03Audio</string>
+			<string>cpCutSwitchAngle04Audio</string>
+			<string>cpCutSwitchAngle05Audio</string>
+			<string>cpCutSwitchAngle06Audio</string>
+			<string>cpCutSwitchAngle07Audio</string>
+			<string>cpCutSwitchAngle08Audio</string>
+			<string>cpCutSwitchAngle09Audio</string>
+			<string>cpCutSwitchAngle10Audio</string>
+			<string>cpCutSwitchAngle11Audio</string>
+			<string>cpCutSwitchAngle12Audio</string>
+			<string>cpCutSwitchAngle13Audio</string>
+			<string>cpCutSwitchAngle14Audio</string>
+			<string>cpCutSwitchAngle15Audio</string>
+			<string>cpCutSwitchAngle16Audio</string>
+			<string>cpCutSwitchAngle01Both</string>
+			<string>cpCutSwitchAngle02Both</string>
+			<string>cpCutSwitchAngle03Both</string>
+			<string>cpCutSwitchAngle04Both</string>
+			<string>cpCutSwitchAngle05Both</string>
+			<string>cpCutSwitchAngle06Both</string>
+			<string>cpCutSwitchAngle07Both</string>
+			<string>cpCutSwitchAngle08Both</string>
+			<string>cpCutSwitchAngle09Both</string>
+			<string>cpCutSwitchAngle10Both</string>
+			<string>cpCutSwitchAngle11Both</string>
+			<string>cpCutSwitchAngle12Both</string>
+			<string>cpCutSwitchAngle13Both</string>
+			<string>cpCutSwitchAngle14Both</string>
+			<string>cpCutSwitchAngle15Both</string>
+			<string>cpCutSwitchAngle16Both</string>
+			<string>cpMoveToPlayhead</string>
+			<string>cpPuckOneMouse</string>
+			<string>cpPuckTwoMouse</string>
+			<string>cpPuckThreeMouse</string>
+			<string>cpPuckFourMouse</string>
+			<string>cpColorPuckOneMouse</string>
+			<string>cpColorPuckTwoMouse</string>
+			<string>cpColorPuckThreeMouse</string>
+			<string>cpColorPuckFourMouse</string>
+			<string>cpSaturationPuckOneMouse</string>
+			<string>cpSaturationPuckTwoMouse</string>
+			<string>cpSaturationPuckThreeMouse</string>
+			<string>cpSaturationPuckFourMouse</string>
+			<string>cpExposurePuckOneMouse</string>
+			<string>cpExposurePuckTwoMouse</string>
+			<string>cpExposurePuckThreeMouse</string>
+			<string>cpExposurePuckFourMouse</string>
+			<string>cpSelectClipAtLaneOne</string>
+			<string>cpSelectClipAtLaneTwo</string>
+			<string>cpSelectClipAtLaneThree</string>
+			<string>cpSelectClipAtLaneFour</string>
+			<string>cpSelectClipAtLaneFive</string>
+			<string>cpSelectClipAtLaneSix</string>
+			<string>cpSelectClipAtLaneSeven</string>
+			<string>cpSelectClipAtLaneEight</string>
+			<string>cpSelectClipAtLaneNine</string>
+			<string>cpSelectClipAtLaneTen</string>
+			<string>cpChangeSmartCollectionsLabel</string>
+			<string>cpCreateOptimizedMediaOn</string>
+			<string>cpCreateOptimizedMediaOff</string>
+			<string>cpCreateMulticamOptimizedMediaOn</string>
+			<string>cpCreateMulticamOptimizedMediaOff</string>
+			<string>cpCreateProxyMediaOn</string>
+			<string>cpCreateProxyMediaOff</string>
+			<string>cpLeaveInPlaceOn</string>
+			<string>cpLeaveInPlaceOff</string>
+			<string>cpBackgroundRenderOn</string>
+			<string>cpBackgroundRenderOff</string>
+			<string>cpChangeTimelineClipHeightUp</string>
+			<string>cpChangeTimelineClipHeightDown</string>
+			<string>cpColorPuckOne</string>
+			<string>cpColorPuckTwo</string>
+			<string>cpColorPuckThree</string>
+			<string>cpColorPuckFour</string>
+			<string>cpSaturationPuckOne</string>
+			<string>cpSaturationPuckTwo</string>
+			<string>cpSaturationPuckThree</string>
+			<string>cpSaturationPuckFour</string>
+			<string>cpExposurePuckOne</string>
+			<string>cpExposurePuckTwo</string>
+			<string>cpExposurePuckThree</string>
+			<string>cpExposurePuckFour</string>
+			<string>cpColorPuckOneUp</string>
+			<string>cpColorPuckTwoUp</string>
+			<string>cpColorPuckThreeUp</string>
+			<string>cpColorPuckFourUp</string>
+			<string>cpColorPuckOneDown</string>
+			<string>cpColorPuckTwoDown</string>
+			<string>cpColorPuckThreeDown</string>
+			<string>cpColorPuckFourDown</string>
+			<string>cpColorPuckOneLeft</string>
+			<string>cpColorPuckTwoLeft</string>
+			<string>cpColorPuckThreeLeft</string>
+			<string>cpColorPuckFourLeft</string>
+			<string>cpColorPuckOneRight</string>
+			<string>cpColorPuckTwoRight</string>
+			<string>cpColorPuckThreeRight</string>
+			<string>cpColorPuckFourRight</string>
+			<string>cpSaturationPuckOneUp</string>
+			<string>cpSaturationPuckTwoUp</string>
+			<string>cpSaturationPuckThreeUp</string>
+			<string>cpSaturationPuckFourUp</string>
+			<string>cpSaturationPuckOneDown</string>
+			<string>cpSaturationPuckTwoDown</string>
+			<string>cpSaturationPuckThreeDown</string>
+			<string>cpSaturationPuckFourDown</string>
+			<string>cpExposurePuckOneUp</string>
+			<string>cpExposurePuckTwoUp</string>
+			<string>cpExposurePuckThreeUp</string>
+			<string>cpExposurePuckFourUp</string>
+			<string>cpExposurePuckOneDown</string>
+			<string>cpExposurePuckTwoDown</string>
+			<string>cpExposurePuckThreeDown</string>
+			<string>cpExposurePuckFourDown</string>
+			<string>cpScrollingTimeline</string>
+			<string>cpEffectsOne</string>
+			<string>cpEffectsTwo</string>
+			<string>cpEffectsThree</string>
+			<string>cpEffectsFour</string>
+			<string>cpEffectsFive</string>
+			<string>cpLaunchFinalCutPro</string>
+			<string>cpShowListOfShortcutKeys</string>
+			<string>cpHighlightBrowserPlayhead</string>
+			<string>cpRevealInBrowserAndHighlight</string>
+			<string>cpSingleMatchFrameAndHighlight</string>
+			<string>cpRevealMulticamClipInBrowserAndHighlight</string>
+			<string>cpRevealMulticamClipInAngleEditorAndHighlight</string>
+			<string>cpBatchExportFromBrowser</string>
+			<string>cpChangeBackupInterval</string>
+			<string>cpToggleTimecodeOverlays</string>
+			<string>cpToggleMovingMarkers</string>
+			<string>cpAllowTasksDuringPlayback</string>
+			<string>cpSelectColorBoardPuckOne</string>
+			<string>cpSelectColorBoardPuckTwo</string>
+			<string>cpSelectColorBoardPuckThree</string>
+			<string>cpSelectColorBoardPuckFour</string>
+			<string>cpRestoreKeywordPresetOne</string>
+			<string>cpRestoreKeywordPresetTwo</string>
+			<string>cpRestoreKeywordPresetThree</string>
+			<string>cpRestoreKeywordPresetFour</string>
+			<string>cpRestoreKeywordPresetFive</string>
+			<string>cpRestoreKeywordPresetSix</string>
+			<string>cpRestoreKeywordPresetSeven</string>
+			<string>cpRestoreKeywordPresetEight</string>
+			<string>cpRestoreKeywordPresetNine</string>
+			<string>cpSaveKeywordPresetOne</string>
+			<string>cpSaveKeywordPresetTwo</string>
+			<string>cpSaveKeywordPresetThree</string>
+			<string>cpSaveKeywordPresetFour</string>
+			<string>cpSaveKeywordPresetFive</string>
+			<string>cpSaveKeywordPresetSix</string>
+			<string>cpSaveKeywordPresetSeven</string>
+			<string>cpSaveKeywordPresetEight</string>
+			<string>cpSaveKeywordPresetNine</string>
 		</array>
 	</dict>
 	<key>Application</key>
