#592 * Added the `zoomtoselection` plugin, as well as relevant commands for CP and FCPX.

--- a/src/plugins/finalcutpro/hacks/shortcuts/commandsets/10.3.3/modified/NSProCommandGroups.plist
+++ b/src/plugins/finalcutpro/hacks/shortcuts/commandsets/10.3.3/modified/NSProCommandGroups.plist
@@ -205,6 +205,7 @@
 			<string>cpSaveKeywordPresetSeven</string>
 			<string>cpSaveKeywordPresetEight</string>
 			<string>cpSaveKeywordPresetNine</string>
+			<string>cpZoomToSelection</string>
 		</array>
 	</dict>
 	<key>Application</key>
