Fixed Command Set Files

--- a/src/plugins/finalcutpro/hacks/shortcuts/commandsets/10.3.2/modified/NSProCommandGroups.plist
+++ b/src/plugins/finalcutpro/hacks/shortcuts/commandsets/10.3.2/modified/NSProCommandGroups.plist
@@ -8,6 +8,7 @@
 		<integer>2</integer>
 		<key>commands</key>
 		<array>
+			<string>cpText2Speech</string>
 			<string>cpCopyWithCustomLabel</string>
 			<string>cpCopyWithCustomLabelAndFolder</string>
 			<string>cpAddNoteToSelectedClip</string>
@@ -171,7 +172,6 @@
 			<string>cpEffectsThree</string>
 			<string>cpEffectsFour</string>
 			<string>cpEffectsFive</string>
-			<string>cpShowListOfShortcutKeys</string>
 			<string>cpHighlightBrowserPlayhead</string>
 			<string>cpRevealInBrowserAndHighlight</string>
 			<string>cpSingleMatchFrameAndHighlight</string>
