#636 Improved `test_fcp.lua` script
* Added the `Test Library` library to make testing more controlled
* Added some support methods to `LibraryBrowser`, `LibraryFilmstrip`
and `LibraryList` to help with loading the Test Library.
* Added the `Clip` class to make working between ‘filmstrip’ and ‘list’
mode a bit easier.
* Made `cp.ui.Table.new(…)` a function instead of a method.
* Added documentation to `cp.ui.Table`.
* `require(“tests.test_fcp”)()` will now test every supported language
by default. To test a single language, call
`require(“tests.tes_fcp”)(“en”)`

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,7 @@ luac.out
 
 build
 temp
+
+src/extensions/tests/fcp/Test Library.fcpbundle/.lock
+
+src/extensions/tests/fcp/Test Library.fcpbundle/.lock-info
