--- a/src/plugins/finalcutpro/hacks/shortcuts/commandsets/10.3.3/modified/NSProCommands.plist
+++ b/src/plugins/finalcutpro/hacks/shortcuts/commandsets/10.3.3/modified/NSProCommands.plist
@@ -72,105 +72,105 @@
 		<key>downSelector</key>
 		<string>cpHUD:</string>
 	</dict>
-	<key>generator1</key>
+	<key>cpGenerator1</key>
 	<dict>
 		<key>downRepeats</key>
 		<integer>0</integer>
 		<key>downSelector</key>
 		<string>generator1:</string>
 	</dict>
-	<key>generator2</key>
+	<key>cpGenerator2</key>
 	<dict>
 		<key>downRepeats</key>
 		<integer>0</integer>
 		<key>downSelector</key>
 		<string>generator2:</string>
 	</dict>
-	<key>generator3</key>
+	<key>cpGenerator3</key>
 	<dict>
 		<key>downRepeats</key>
 		<integer>0</integer>
 		<key>downSelector</key>
 		<string>generator3:</string>
 	</dict>
-	<key>generator4</key>
+	<key>cpGenerator4</key>
 	<dict>
 		<key>downRepeats</key>
 		<integer>0</integer>
 		<key>downSelector</key>
 		<string>generator4:</string>
 	</dict>
-	<key>generator5</key>
+	<key>cpGenerator5</key>
 	<dict>
 		<key>downRepeats</key>
 		<integer>0</integer>
 		<key>downSelector</key>
 		<string>generator5:</string>
 	</dict>
-	<key>title1</key>
+	<key>cpTitle1</key>
 	<dict>
 		<key>downRepeats</key>
 		<integer>0</integer>
 		<key>downSelector</key>
 		<string>title1:</string>
 	</dict>
-	<key>title2</key>
+	<key>cpTitle2</key>
 	<dict>
 		<key>downRepeats</key>
 		<integer>0</integer>
 		<key>downSelector</key>
 		<string>title2:</string>
 	</dict>
-	<key>title3</key>
+	<key>cpTitle3</key>
 	<dict>
 		<key>downRepeats</key>
 		<integer>0</integer>
 		<key>downSelector</key>
 		<string>title3:</string>
 	</dict>
-	<key>title4</key>
+	<key>cpTitle4</key>
 	<dict>
 		<key>downRepeats</key>
 		<integer>0</integer>
 		<key>downSelector</key>
 		<string>title4:</string>
 	</dict>
-	<key>title5</key>
+	<key>cpTitle5</key>
 	<dict>
 		<key>downRepeats</key>
 		<integer>0</integer>
 		<key>downSelector</key>
 		<string>title5:</string>
 	</dict>
-	<key>transition1</key>
+	<key>cpTransition1</key>
 	<dict>
 		<key>downRepeats</key>
 		<integer>0</integer>
 		<key>downSelector</key>
 		<string>transition1:</string>
 	</dict>
-	<key>transition2</key>
+	<key>cpTransition2</key>
 	<dict>
 		<key>downRepeats</key>
 		<integer>0</integer>
 		<key>downSelector</key>
 		<string>transition2:</string>
 	</dict>
-	<key>transition3</key>
+	<key>cpTransition3</key>
 	<dict>
 		<key>downRepeats</key>
 		<integer>0</integer>
 		<key>downSelector</key>
 		<string>transition3:</string>
 	</dict>
-	<key>transition4</key>
+	<key>cpTransition4</key>
 	<dict>
 		<key>downRepeats</key>
 		<integer>0</integer>
 		<key>downSelector</key>
 		<string>transition4:</string>
 	</dict>
-	<key>transition5</key>
+	<key>cpTransition5</key>
 	<dict>
 		<key>downRepeats</key>
 		<integer>0</integer>
@@ -1132,70 +1132,70 @@
 		<key>downSelector</key>
 		<string>cpScrollingTimeline:</string>
 	</dict>
-	<key>audioEffect1</key>
+	<key>cpAudioEffect1</key>
 	<dict>
 		<key>characterString</key>
 		<string>1</string>
 		<key>modifiers</key>
 		<string>control shift alt</string>
 	</dict>
-	<key>audioEffect2</key>
+	<key>cpAudioEffect2</key>
 	<dict>
 		<key>characterString</key>
 		<string>2</string>
 		<key>modifiers</key>
 		<string>control shift alt</string>
 	</dict>
-	<key>audioEffect3</key>
+	<key>cpAudioEffect3</key>
 	<dict>
 		<key>characterString</key>
 		<string>3</string>
 		<key>modifiers</key>
 		<string>control shift alt</string>
 	</dict>
-	<key>audioEffect4</key>
+	<key>cpAudioEffect4</key>
 	<dict>
 		<key>characterString</key>
 		<string>4</string>
 		<key>modifiers</key>
 		<string>control shift alt</string>
 	</dict>
-	<key>audioEffect5</key>
+	<key>cpAudioEffect5</key>
 	<dict>
 		<key>characterString</key>
 		<string>5</string>
 		<key>modifiers</key>
 		<string>control shift alt</string>
 	</dict>
-	<key>videoEffect1</key>
+	<key>cpVideoEffect1</key>
 	<dict>
 		<key>downRepeats</key>
 		<integer>0</integer>
 		<key>downSelector</key>
 		<string>videoEffect1:</string>
 	</dict>
-	<key>videoEffect2</key>
+	<key>cpVideoEffect2</key>
 	<dict>
 		<key>downRepeats</key>
 		<integer>0</integer>
 		<key>downSelector</key>
 		<string>videoEffect2:</string>
 	</dict>
-	<key>videoEffect3</key>
+	<key>cpVideoEffect3</key>
 	<dict>
 		<key>downRepeats</key>
 		<integer>0</integer>
 		<key>downSelector</key>
 		<string>videoEffect3:</string>
 	</dict>
-	<key>videoEffect4</key>
+	<key>cpVideoEffect4</key>
 	<dict>
 		<key>downRepeats</key>
 		<integer>0</integer>
 		<key>downSelector</key>
 		<string>videoEffect4:</string>
 	</dict>
-	<key>videoEffect5</key>
+	<key>cpVideoEffect5</key>
 	<dict>
 		<key>downRepeats</key>
 		<integer>0</integer>
