--- a/src/extensions/hs/_asm/guitk/element/_control.so.dSYM/Contents/Info.plist
+++ b/src/extensions/hs/_asm/guitk/element/_control.so.dSYM/Contents/Info.plist
@@ -5,7 +5,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>English</string>
 		<key>CFBundleIdentifier</key>
-		<string>com.apple.xcode.dsym._controller.so</string>
+		<string>com.apple.xcode.dsym._control.so</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundlePackageType</key>
