#830 Removed/ignored .lock* files in libraries

--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,8 @@ luac.out
 build
 temp
 
-src/extensions/tests/fcp/Test Library.fcpbundle/.lock
-
-src/extensions/tests/fcp/Test Library.fcpbundle/.lock-info
 .vscode
+
+# FCP Libraries
+.lock-info
+.lock
