--- a/.editorconfig
+++ b/.editorconfig
@@ -2,6 +2,6 @@
 # Set default charset
 [*.{js,htm,html,sass,css,lua,lp}]
 charset = utf-8
-indent_style = tab
+indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
