--- a/src/tests/cp/apple/finalcutpro/_libraries/10.4.10/Test Library.fcpbundle/Settings.plist
+++ b/src/tests/cp/apple/finalcutpro/_libraries/10.4.10/Test Library.fcpbundle/Settings.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>backupFolderName</key>
-	<string>Test Library</string>
+	<string>Test Library 4</string>
 	<key>libraryID</key>
 	<string>55B00A49-84CD-4F0A-88A8-1845A6C89AA1</string>
 </dict>
